Use Collection.emptyList instead of List.of()